# applications

./: .gitignore  pyproject.toml
fake-notes-detection/: README.md  main.py
fake-notes-detection-webapp/: requirements.txt
fake-notes-detection/data/: df_final.csv
loan-customers-classification-app/: .gitignore
text-processing-automation/: NERTraining.py  README.md
